# pingcrm-rust

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  cli.sh  diesel.toml  package.json  tailwind.config.js  vite.config.js
app/: Cargo.toml
app/config/: mod.rs
app/config/routes/: flat_file_config.rs  jsonapi_config.rs  mod.rs
app/src/: app.rs  config.rs  inertia.rs  lib.rs  main.rs  state.rs
app/src/application/: mod.rs
app/src/application/auth/: mod.rs  user_actions.rs
app/src/clockwork/: controller.rs  debug_stack.rs  mod.rs  repository.rs
app/src/console/: environment.rs  mod.rs  output.rs  runner.rs  table.rs
app/src/console/commands/: database.rs  list.rs  migrations.rs  mod.rs  query.rs  router.rs  schema.rs  serve.rs  user.rs
app/src/data/: mod.rs  txt.rs
app/src/database/: diesel_user_repository.rs  jsonapi_resource.rs  mod.rs  pool.rs  query_helpers.rs  schema.rs
app/src/database/factories/: account_factory.rs  audit_log_factory.rs  contact_factory.rs  entity_factory.rs  factory_trait.rs  mod.rs  organization_factory.rs  user_factory.rs
app/src/database/models/: account.rs  address.rs  audit_log.rs  brand.rs  category.rs  clockwork.rs  contact.rs  customer.rs  image_job.rs  media.rs  mod.rs  order.rs  order_item.rs  organization.rs  product.rs  user.rs
app/src/database/repositories/: account_repository.rs  address_repository.rs  audit_log_repository.rs  brand_repository.rs  category_repository.rs  contact_repository.rs  customer_repository.rs  image_job_repository.rs  media_repository.rs  mod.rs  order_item_repository.rs  order_repository.rs  organization_repository.rs  product_repository.rs  user_repository.rs
app/src/domain/: mod.rs
app/src/domain/audit/: mod.rs
app/src/domain/media/: entity.rs  mod.rs
app/src/domain/user/: entity.rs  mod.rs  models.rs
app/src/events/: mod.rs  security_events.rs  user_events.rs
app/src/extractors/: mod.rs
app/src/filter/: mod.rs  search_filter.rs
app/src/fixtures/: account_fixtures.rs  app_fixtures.rs  audit_log_fixtures.rs  entity_fixtures.rs  mod.rs  user_fixtures.rs
app/src/handlers/: controller.rs  generic_handler.rs  mod.rs
app/src/infrastructure/: mod.rs
app/src/infrastructure/http/: client_ip.rs  cookie.rs  mod.rs
app/src/listeners/: mod.rs  security_listeners.rs  user_listeners.rs
app/src/middleware/: clockwork.rs  extractors.rs  maintenance.rs  mod.rs  rate_limit.rs  security_headers.rs
app/src/middleware/auth/: helpers.rs  middleware.rs  mod.rs
app/src/presentation/: mod.rs
app/src/presentation/dto/: mod.rs  user_presenter.rs
app/src/presenter/: mod.rs  user_presenter.rs
app/src/registry/: mod.rs  v1.rs
app/src/requests/: account.rs  contact.rs  mod.rs  organization.rs  user.rs
app/src/router/: app_router_service.rs  decorators.rs  kernel.rs  loader.rs  mod.rs  router_interface.rs
app/src/router/controllers/: auth.rs  contacts_pages.rs  dashboard.rs  flat_file.rs  health.rs  media_controller.rs  mod.rs  organizations_pages.rs  placeholder_pages.rs  security.rs  users.rs  users_pages.rs
app/src/router/loaders/: admin.rs  api.rs  app.rs  clockwork.rs  flat_file.rs  jsonapi.rs  mod.rs  static_files.rs  web.rs
app/src/seeder/: mod.rs
app/tests/: integration_tests.rs
app/tests/helpers/: database.rs  fixtures.rs  mod.rs
commands/: debug.sh  pingcrm-db.sh  pingcrm-dev.sh  pingcrm-router.sh  pingcrm-server.sh  pingcrm-user.sh
crates/core/: Cargo.toml
crates/core/src/: error.rs  error_handler.rs  lib.rs  response.rs
crates/core/src/database/: user_repository.rs
crates/core/src/event/: dispatcher.rs  event.rs  listener.rs  mod.rs
crates/core/src/extractors/: client_ip.rs  content_negotiation.rs  filter.rs  form.rs  mod.rs  pagination.rs  validated.rs
crates/core/src/http/: mod.rs  upload.rs
crates/core/src/image/: mod.rs  options.rs  processor.rs  thumbnail.rs
crates/core/src/inertia/: mod.rs  props.rs  request.rs  response.rs  template.rs  vite.rs
crates/core/src/jsonapi/: configurator.rs  controller.rs  document.rs  error.rs  generic_config.rs  input_normalizer.rs  mod.rs  openapi_generator.rs  pagination.rs  query.rs  query_builder.rs  request.rs  request_deserializer.rs  resource.rs  response_builder.rs  serializer.rs  types.rs  validation.rs
crates/core/src/middleware/: csrf.rs  mod.rs  prepare_response.rs  security_headers.rs
crates/core/src/negotiation/: accept.rs  accept_charset.rs  accept_encoding.rs  accept_language.rs  charset_negotiator.rs  encoding_negotiator.rs  language_negotiator.rs  mod.rs  negotiator.rs
crates/core/src/queue/: backend.rs  context.rs  error.rs  job.rs  mod.rs  queue.rs  registry.rs  worker.rs
crates/core/src/routing/: mod.rs
crates/core/src/security/: auth_context.rs  mod.rs  password_hasher.rs
crates/core/src/security/access_control/: middleware.rs  mod.rs  rule.rs
crates/core/src/security/audit/: audit_log.rs  mod.rs
crates/core/src/security/authenticator/: authenticator.rs  form_login.rs  jwt.rs  mod.rs  remember_me.rs  session.rs  session_helpers.rs
crates/core/src/security/authorization/: mod.rs
crates/core/src/security/csrf/: csrf.rs  mod.rs
crates/core/src/security/firewall/: mod.rs  pattern.rs  tower_firewall.rs
crates/core/src/security/rate_limiting/: mod.rs  rate_limit.rs
crates/core/src/security/session/: mod.rs  session_store.rs
crates/core/src/security/token/: mod.rs  token.rs
crates/core/src/security/two_factor/: mod.rs  totp.rs
crates/core/src/security/user/: mod.rs  user.rs
crates/core/src/tus/: checksum.rs  config.rs  filesystem_storage.rs  metadata.rs  mod.rs  server.rs  storage.rs  tus.toml
crates/core/src/validation/: extractors.rs  form.rs  mod.rs  result.rs
crates/core/templates/: inertia.html
crates/core/tests/: README.md  access_control_tests.rs  assets_access_test.rs  concurrent_auth_tests.rs  error_handling_tests.rs  event_system_tests.rs  inertia_tests.rs  jsonapi_edge_cases.rs  jsonapi_integration_tests.rs  loom_authenticator_chain.rs  middleware_tests.rs  security_tests.rs  validation_tests.rs
migrations/: create_jobs_table.sql  (+3 more)
(+5 files in other folders)
