# AppKit Rust Workspace
[workspace]
resolver = "2"
members = [
    "crates/core",
    "app",
]

# Workspace-wide dependencies
[workspace.dependencies]
# Internal crates
appkit-core = { path = "crates/core" }

# Web framework
axum = { version = "0.8", features = ["macros", "http2"] }
axum-extra = { version = "0.12", features = ["form", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "fs", "signal"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "compression-full", "trace", "timeout", "catch-panic", "limit", "request-id", "propagate-header"] }
tower-sessions = { version = "0.14" }
tower-sessions-memory-store = "0.14"
tower-sessions-redis-store = "0.16"
tower_governor = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_qs = "0.13"
urlencoding = "2.1"
base64 = "0.22"

# Database
diesel = { version = "2.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "r2d2", "serde_json", "uuid"] }
diesel-async = { version = "0.7", features = ["sqlite", "deadpool"] }
diesel_migrations = { version = "2.3", features = ["sqlite"] }
libsqlite3-sys = { version = "0.36", features = ["bundled"] }
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
argon2 = "0.5"
jsonwebtoken = "9"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
totp-lite = "2.0"
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
natord = "1.0"

# OpenAPI / JSON Schema
schemars = { version = "0.8", features = ["chrono", "uuid1"] }

# File system utilities
walkdir = "2.4"
glob = "0.3"
lazy_static = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP utilities
http = "1.0"
http-body-util = "0.1"
mime = "0.3"
mime_guess = "2.0"
url = "2.5"

# Templating
tera = "1.19"
once_cell = "1.19"

# Async utilities
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Config
dotenv = "0.15"
toml = "0.9"
config = "0.14"

# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }
heck = "0.5"
Inflector = "0.11"

# Image processing
image = "0.25"

# Fake data generation
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }

# Additional types
rust_decimal = "1.33"
prefix = "1.2.1"

[workspace.lints.clippy]
# Enable stricter linting for code quality
# Style warnings
empty_line_after_doc_comments = "warn"
match_like_matches_macro = "warn"
manual_is_multiple_of = "warn"
should_implement_trait = "warn"
derivable_impls = "warn"
module_inception = "warn"
redundant_closure = "warn"
redundant_field_names = "warn"
useless_vec = "warn"
bool_assert_comparison = "warn"

# Performance warnings
map_or_for_option = "warn"

# Readability warnings
get_unwrap = "warn"
explicit_into_iter_loop = "warn"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
