[package]
name = "appkit-core"
version = "0.1.0"
edition = "2021"
authors = ["AppKit Contributors"]
description = "AppKit framework core - reusable components for building web applications"
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[lib]
name = "appkit_core"
path = "src/lib.rs"

[dependencies]
# Web framework (workspace)
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-sessions = { workspace = true }
tower-sessions-memory-store = { workspace = true }
tower-sessions-redis-store = { workspace = true }
tower_governor = { workspace = true }

# Serialization (workspace)
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_qs = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }

# Database (workspace)
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel_migrations = { workspace = true }
redis = { workspace = true }

# Security (workspace)
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
time = { workspace = true }
totp-lite = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md5 = { workspace = true }
rand = { workspace = true }

# Validation (workspace)
validator = { workspace = true }
regex = { workspace = true }

# OpenAPI / JSON Schema (workspace)
schemars = { workspace = true }

# Error handling (workspace)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Tracing (workspace)
tracing = { workspace = true }

# HTTP utilities (workspace)
http = { workspace = true }
http-body-util = { workspace = true }
mime = { workspace = true }
mime_guess = { workspace = true }
url = { workspace = true }

# Image processing
image = { workspace = true }

# Async (workspace)
async-trait = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }

# Config (workspace)
dotenv = { workspace = true }
toml = { workspace = true }
config = { workspace = true }

# Templating (workspace)
tera = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
axum-test = "18"
loom = "0.7"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
